[package]
name = "projctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
pathdiff = "0.2"
shellexpand = "3.1"
which = "8.0.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9.7"
dialoguer = "0.12.0"
console = "0.16.1"
shlex = "1.3.0"
